# ChameleonRT-lang

./: .clang-format  .gitignore  CMakeLists.txt  ChameleonRTLexer.g4  README.md
.github/workflows/: cmake.yml
cmake/: ANTLRGrammarUtil.cmake  ANTLRGrammarUtil.ps1.in  ANTLRGrammarUtil.sh.in  ExternalAntlr4Cpp.cmake  FindANTLR.cmake  FindD3D12.cmake
compiler/: CMakeLists.txt  ChameleonRTParser.g4  ast_builder_visitor.cpp  ast_builder_visitor.h  ast_expr_builder_visitor.h  error_listener.cpp  global_struct_param_expansion_visitor.h  resolver_visitor.h  target_api.h
compiler/ast/: declaration.cpp  modifying_visitor.cpp
compiler/hlsl/: shader_register_binding.h  translate_builtin_function_call.cpp  translate_builtin_function_call.h  translate_builtin_type.h
renderer/: CMakeLists.txt  main.cpp
runtime/: dx12_utils.h  dxdisplay.cpp  dxdisplay.h  dxr_utils.cpp  dxr_utils.h
runtime/dxr/: dx12_utils.cpp  dxdisplay.h  small.hlsl
src/: CMakeLists.txt  ast_builder_visitor.cpp  ast_expr_builder_visitor.cpp  ast_struct_array_access_builder_visitor.cpp  ast_struct_array_access_builder_visitor.h  builtins.cpp  chameleonrtc.cpp  error_listener.h  global_struct_param_expansion_visitor.cpp  global_struct_param_expansion_visitor.h  json_visitor.cpp  json_visitor.h  old_resolver_visitor.cpp  old_resolver_visitor.h  parameter_transforms.cpp  parameter_transforms.h  rename_entry_point_param_visitor.cpp  rename_entry_point_param_visitor.h  resolver_visitor.cpp  resolver_visitor.h
src/ast/: declaration.cpp  declaration.h  expression.cpp  expression.h  modifying_visitor.cpp  modifying_visitor.h  node.cpp  node.h  statement.cpp  statement.h  symbol.cpp  symbol.h  type.cpp  type.h  visitor.cpp  visitor.h
src/chameleonrtc/: CMakeLists.txt  chameleonrtc.cpp
src/crtl/: CMakeLists.txt  shader_entry_point.cpp  shader_library.cpp  shader_library.h
src/crtl/compiler/: CMakeLists.txt  ast_builder_visitor.cpp  ast_expr_builder_visitor.cpp  ast_struct_array_access_builder_visitor.cpp  ast_struct_array_access_builder_visitor.h  builtins.h  global_struct_param_expansion_visitor.cpp  parameter_transforms.h  rename_entry_point_param_visitor.h  resolver_visitor.cpp
src/crtl/compiler/ast/: declaration.h  expression.cpp  node.h  symbol.cpp  type.cpp  type.h  visitor.cpp  visitor.h
src/crtl/compiler/hlsl/: crtl_to_hlsl.cpp  crtl_to_hlsl.h  output_visitor.h  parameter_metadata_output_visitor.cpp  parameter_metadata_output_visitor.h  shader_register_binding.cpp  translate_builtin_type.cpp
src/crtl/core/: CMakeLists.txt  api_object.h  backend_plugin.cpp  backend_plugin.h  buffer.h  buffer_view.h  crtl_buffer.cpp  crtl_device.cpp  crtl_event.cpp  crtl_geometry.cpp  crtl_parameter_block.cpp  crtl_queue.cpp  crtl_rtpipeline.cpp  crtl_shader.cpp  crtl_texture.cpp  device.cpp  device.h  error.cpp  error.h  shader_entry_point.h  shader_library.h  type.cpp  type.h  util.cpp  util.h
src/crtl/core/dxr/: CMakeLists.txt  crtl_dxr.cpp  dx12_utils.cpp  dxr_blas.cpp  dxr_blas.h  dxr_buffer.cpp  dxr_buffer.h  dxr_buffer_view.cpp  dxr_buffer_view.h  dxr_command_allocator.cpp  dxr_command_allocator.h  dxr_command_buffer.cpp  dxr_command_buffer.h  dxr_descriptor_heap.cpp  dxr_descriptor_heap.h  dxr_device.cpp  dxr_device.h  dxr_enums.cpp  dxr_enums.h  dxr_event.cpp  dxr_event.h  dxr_geometry.cpp  dxr_geometry.h  dxr_global_parameter_block.cpp  dxr_global_parameter_block.h  dxr_group.cpp  dxr_group.h  dxr_instance.cpp  dxr_instance.h  dxr_parameter_block.cpp  dxr_parameter_block.h  dxr_queue.cpp  dxr_queue.h  dxr_renderable.cpp  dxr_renderable.h  dxr_resource.cpp  dxr_resource.h  dxr_root_parameter.cpp  dxr_root_parameter.h  dxr_root_signature.cpp  (+27 more)
src/crtl/core/include/crtl/: crtl.h  crtl_buffer.h  crtl_core.h  crtl_device.h  crtl_enums.h  crtl_event.h  crtl_geometry.h  crtl_parameter_block.h  crtl_queue.h  crtl_rtpipeline.h  crtl_shader.h  crtl_texture.h
src/crtl/grammar/: CMakeLists.txt  ChameleonRTLexer.g4  ChameleonRTParser.g4
src/crtl/rhi/: CMakeLists.txt  api_object.h  backend.cpp  backend.h  backend_plugin.cpp  backend_plugin.h  buffer.h  buffer_view.h  crtl_buffer.cpp  crtl_device.cpp  crtl_event.cpp  crtl_geometry.cpp  crtl_parameter_block.cpp  crtl_queue.cpp  crtl_rhi_export.h  crtl_rtpipeline.cpp  crtl_shader.cpp  crtl_shader_library.cpp  crtl_texture.cpp  device.h  shader_entry_point.h  shader_library.cpp  shader_library.h
src/crtl/rhi/dxr/: CMakeLists.txt  dx12_utils.h  dxdisplay.cpp  dxr_utils.cpp  dxr_utils.h  small.json
src/crtl/rhi/include/crtl/: crtl.h  crtl_buffer.h  crtl_core.h  crtl_device.h  crtl_enums.h  crtl_event.h  crtl_geometry.h  crtl_parameter_block.h  crtl_queue.h  crtl_rtpipeline.h  crtl_shader.h  crtl_shader_library.h  crtl_texture.h
src/hlsl/: output_visitor.cpp  output_visitor.h  parameter_metadata_output_visitor.cpp  register_binding.h  shader_register_allocator.cpp  shader_register_allocator.h  shader_register_binding.cpp  shader_register_binding.h  translate_builtin_type.cpp  translate_builtin_type.h
src/renderer/: CMakeLists.txt  main.cpp
src/renderer/util/: util.cpp
src/renderer/util/display/: display.h  gldisplay.h
tests/: sketch.crtl  sketch.glsl  sketch.hlsl  small.crtl  small.hlsl
util/: CMakeLists.txt  util.cpp  util.h
util/display/: gldisplay.cpp
